src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
/* *{
  border:1px solid red;
} */
:root {
  --grey: #ECF2FF;
  --blue: #3E54AC;
  --purple: #655DBB;
  --purple-light: #BFACE2;
}
.navbar-light .navbar-brand {
  color: var(--blue);
}
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}
.hero-section{
  /* background: url(../src/images/1.jpg); */
  background-color: var(--grey);
  margin: 0;
  padding: 0;
}
 img{
  width:100% ;
  height: 100%;
  object-fit: cover;
} 
.hero-header{
  color: var(--blue);
}
.hero-btn{
  background-color: var(--blue);
  border-radius: 20px;
}
.link-btn{
  background-color: #BFACE2;
  border-radius: 20px;
  border: 1px solid #BFACE2;
}
.products-box img{
  object-fit: cover;
  width: 100%;
  height: 100%;
}
.buy-btn{
  background-color: var(--blue);
  ;
}
.popular-img img{
  width: 50%;
  height: 50%;
}

